<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/card_common_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/common_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/font_size"
        android:textColor="@color/content_tile_unread"
        android:textSize="@dimen/text_size_18" />

    <RadioGroup
        android:id="@+id/font_size_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <RadioButton
            android:id="@+id/font_size_rb12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_12"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/font_size_rb14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_14"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/font_size_rb16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_16"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/font_size_rb18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_18"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/font_size_rb20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_20"
            android:textSize="@dimen/text_size_16" />

        <RadioButton
            android:id="@+id/font_size_rb22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:button="@null"
            android:drawableRight="@mipmap/apptheme_btn_check_off_holo_light"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/font_size_22"
            android:textSize="@dimen/text_size_16" />
    </RadioGroup>

    <Button
        android:id="@+id/font_size_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:layout_gravity="right"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sure"
        android:textColor="@color/main_color"
        android:textSize="@dimen/text_size_14" />

</LinearLayout>
