<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/actionbar_common" />

    <RelativeLayout
        android:id="@+id/font_size_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/font_size_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/font_size"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/font_size_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/font_size_setting"
            android:layout_marginTop="2dp"
            android:text="@string/font_size_18"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/info_push_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <CheckBox
            android:id="@+id/info_push_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/info_push_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/info_push_check"
            android:text="@string/info_push"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/info_push_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_push_setting"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@id/info_push_check"
            android:text="@string/info_push_yes"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/offline_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <CheckBox
            android:id="@+id/offline_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/offline_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/offline_check"
            android:text="@string/offline_setting"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/offline_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/offline_setting"
            android:layout_marginTop="2dp"
            android:layout_toLeftOf="@id/offline_check"
            android:text="@string/offline_setting_yes"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/app_update_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/app_update_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_update"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/app_update_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_update_setting"
            android:layout_marginTop="2dp"
            android:text="@string/app_update_lasted"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/feedback_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/feedback_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/feedback_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback_setting"
            android:layout_marginTop="2dp"
            android:text="@string/feedback_label"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/share_setting_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/share_setting_img"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_publish_weibo_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/share_setting_img"
            android:gravity="center_vertical"
            android:text="@string/share_account"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/open_src_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/open_src_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_src_title"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/open_src_setting"
            android:layout_marginTop="2dp"
            android:text="@string/open_src_label"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

    <RelativeLayout
        android:id="@+id/app_about_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/app_about_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_about_tile"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/app_about_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_about_setting"
            android:layout_marginTop="2dp"
            android:text="@string/app_about_label"
            android:textColor="@color/content_label_unread"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/common_horizontal_margin"
        android:layout_marginRight="@dimen/common_horizontal_margin"
        android:background="@color/drawer_line" />

</LinearLayout>
