<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_ab_share_pack_mtrl_alpha"
                android:padding="1dp">

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reply_oper_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/reply_comment"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/drawer_line"/>

        <TextView
            android:id="@+id/reply_oper_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/reply_copy"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/drawer_line"/>

        <TextView
            android:id="@+id/reply_oper_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/reply_report"
            android:textColor="@color/content_tile_unread"
            android:textSize="@dimen/text_size_14"/>
    </LinearLayout>
</RelativeLayout>
